Fix people having squashed avatars in the default theme
BUG: 280733

REVIEW: 102486

Reviewed by: Martin Klapetek

--- a/data/styles/renkoo.AdiumMessageStyle/Contents/Resources/Styles/Header.css
+++ b/data/styles/renkoo.AdiumMessageStyle/Contents/Resources/Styles/Header.css
@@ -25,8 +25,8 @@
 
 #x-heading .x-conversationIncomingIcon img
 {
-	width: 48px;
-	height: 48px;
+	max-width: 48px;
+	max-height: 48px;
 }
 
 #x-heading .x-conversationWith
